#ifndef ADDRESSBOOKAPLICATION_H
#define ADDRESSBOOKAPLICATION_H
#include <iostream>


using namespace std;


//aqui se manejara la intraccion del usuarioo
class AddressBookApplication{
private:

public:

};

//muestra el menu y las opciones
class Menu{
private:

public:

};

#endif //ADDRESSBOOKAPLICATION_H